httpd-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: dev
  labels:
    app: my-app
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  minReadySeconds: 30
  revisionHistoryLimit: 10
  strategy:
   rollingUpdate:
    maxSurge: 1
    maxUnavailable: 0
   type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: httpd:latest # update image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
