httpd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: dev
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: my-app
  type: ClusterIP
