Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - apping.xxxx.xxx.com # add hostname
    secretName: app-ing-tls
  ingressClassName: nginx
  rules:
  - host: apping.xxxx.xxxx.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-app-service
            port:
              number: 80
